--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
     <build>
         <plugins>
             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-install-plugin</artifactId>
+                 <executions>
+                   <execution>
+                     <id>default-install</id>
+                     <phase>none</phase>
+                   </execution>
+                 </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.6</version>
